# raytracer

./: .gitignore  CMakeLists.txt  README.md  RayTracerOne.sln
RayTracerOne/: RayTracerOne.vcxproj  RayTracerOne.vcxproj.filters  camera.h  defocus_camera.cpp  defocus_camera.h  dielectric.cpp  dielectric.h  hittable.h  hittable_list.cpp  hittable_list.h  lamberian.cpp  lambertian.cpp  lambertian.h  main.cpp  material.cpp  material.h  metal.cpp  metal.h  moving_sphere.cpp  moving_sphere.h  ray.h  simple_camera.cpp  simple_camera.h  sphear.cpp  sphear.h  sphere.cpp  sphere.h  vec3.h
RayTracerOne/Debug/: vc140.idb
