cmake_minimum_required(VERSION 2.8)
project( RayTracer )
find_package( OpenCV REQUIRED )
find_package( Threads REQUIRED )
add_executable( RayTracer RayTracerOne/main.cpp RayTracerOne/hittable_list.cpp RayTracerOne/metal.cpp RayTracerOne/moving_sphere.cpp RayTracerOne/sphere.cpp RayTracerOne/dielectric.cpp RayTracerOne/lambertian.cpp RayTracerOne/material.cpp RayTracerOne/simple_camera.cpp )
target_link_libraries( RayTracer ${OpenCV_LIBS} ${CMAKE_THREAD_LIBS_INIT} ) 
